# test_cmake_shared_link_chain_with_vcpkg

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: InstallArtifacts.cmake  VcpkgHandle.cmake
dylibsrc/: CMakeLists.txt  dylibsrc.cpp  dylibsrc.hpp
src/: CMakeLists.txt  main.cpp
